// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryReducer should handle all defined error types: rejected types GET_HOSTS_INVENTORY_GUESTS_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "status": 0,
    },
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {},
    "tabs": Object {},
  },
  "type": "GET_HOSTS_INVENTORY_GUESTS_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined error types: rejected types GET_HOSTS_INVENTORY_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "status": 0,
    },
    "subscriptionsInventory": Object {},
    "tabs": Object {},
  },
  "type": "GET_HOSTS_INVENTORY_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined error types: rejected types GET_SUBSCRIPTIONS_INVENTORY_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "status": 0,
    },
    "tabs": Object {},
  },
  "type": "GET_SUBSCRIPTIONS_INVENTORY_RHSM_REJECTED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_HOSTS_INVENTORY_GUESTS_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "status": 0,
    },
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {},
    "tabs": Object {},
  },
  "type": "GET_HOSTS_INVENTORY_GUESTS_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_HOSTS_INVENTORY_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "status": 0,
    },
    "subscriptionsInventory": Object {},
    "tabs": Object {},
  },
  "type": "GET_HOSTS_INVENTORY_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined fulfilled types: fulfilled types GET_SUBSCRIPTIONS_INVENTORY_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {
      "data": Object {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "status": 0,
    },
    "tabs": Object {},
  },
  "type": "GET_SUBSCRIPTIONS_INVENTORY_RHSM_FULFILLED",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_HOSTS_INVENTORY_GUESTS_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
    },
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {},
    "tabs": Object {},
  },
  "type": "GET_HOSTS_INVENTORY_GUESTS_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_HOSTS_INVENTORY_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
    },
    "subscriptionsInventory": Object {},
    "tabs": Object {},
  },
  "type": "GET_HOSTS_INVENTORY_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle all defined pending types: pending types GET_SUBSCRIPTIONS_INVENTORY_RHSM 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
    },
    "tabs": Object {},
  },
  "type": "GET_SUBSCRIPTIONS_INVENTORY_RHSM_PENDING",
}
`;

exports[`InventoryReducer should handle specific defined types: defined type SET_INVENTORY_TAB 1`] = `
Object {
  "result": Object {
    "hostsGuests": Object {},
    "hostsInventory": Object {},
    "subscriptionsInventory": Object {},
    "tabs": Object {
      "lorem": 1,
    },
  },
  "type": "SET_INVENTORY_TAB",
}
`;
